@@ -60,3 +60,32 @@ done by cd'ing to the top of the source tree and typing './configure
 obtained the source via CVS will need to do './autogen.sh' first.  There
 are a number of options for the 'configure' script; do './configure --help'
 for a detailed list.
+
+BUILDING AN EMBEDDED ROOT FILESYSTEM
+
+1) Install 'RedSleeve 7 Minimal'
+
+2) Enable sound device by doing:
+   echo snd-bcm2835 > /etc/modules-load.d/snd-bcm2835.conf
+
+2) yum install httpd ntp
+
+5) Edit '/usr/lib/systemd/system/httpd.service' and change
+   'PrivateTemp=true' to 'PrivateTemp=false' and
+   'After=network.target remote-fs.target nss-lookup.target' to
+   'After=network.target remote-fs.target nss-lookup.target webhost.service'.
+
+6) Install Paravel platform ssh key in '/root/.ssh/authorized_keys'.
+
+7) Edit '/etc/ssh/sshd_config' and change 'PasswordAuthentication yes'
+   to 'PasswordAuthentiation no'.
+
+8) systemctl daemon-reload
+
+9) systemctl start httpd
+   systemctl enable httpd
+
+10) systemctl stop chronyd
+   systemctl disable chronyd
+   systemctl start ntpd
+   systemctl enable ntpd
