@@ -15,3 +15,6 @@
 2016-01-26 Fred Gleason <fredg@paravelsystems.com>
 	* Fixed a bug in 'glassplayerhost-fastembed.spec.in' that broke
 	the 'make fastembed' target on armv5tel.
+2016-01-26 Fred Gleason <fredg@paravelsystems.com>
+	* Fixed a bug in 'glassplayerhost-fastembed.spec.in' that broke
+	web password database initialization.
